<resources>
    <string name="app_name">Hexes Holdem</string>
    <string name="welcome_to_hexes_hold_em">Welcome, to Hexes Hold\'em!</string>
    <string name="todo">TODO</string>
    <string name="play">Play!</string>
    <string name="welcome_to_hexes_holdem">Welcome to Hexes Holdem</string>
    <string name="card_back">Card Back</string>
    <string name="end_turn">End Turn</string>
    <string name="deck_to_draw_from">deck to draw from</string>
    <string name="ai_river_card_1">ai river card 1</string>
    <string name="ai_river_card_2">AI river card 2</string>
    <string name="ai_river_3">AI river 3</string>
    <string name="ai_river_4">AI river 4</string>
    <string name="player_river_1">Player River 1</string>
    <string name="player_river_2">Player River 2</string>
    <string name="player_river_3">Player River 3</string>
    <string name="player_river_4">player River 4</string>
    <string name="discard_pile">Discard Pile</string>
    <string name="player_hand_card_1">Player Hand Card 1</string>
    <string name="player_hand_card_2">Player Hand Card 2</string>
    <string name="player_haand_card_3">Player Hand Card 3</string>
    <string name="player_hand_card_4">Player Hand Card 4</string>
    <string name="main_menu">Main Menu</string>
    <string name="thank_you_for_playing">Thank you for playing!</string>
    <string name="ai_secret_card_1">ai secret card 1</string>
    <string name="string_ai_secret_card_1" />
    <string name="are_you_winning_son">Are you Winning Son</string>
    <string name="game_continue">Continue</string>
    <string name="proceed_to_scoring">Proceed to scoring?</string>
    <string name="ai_secret_card_6">AI Secret Card 6</string>
    <string name="ai_secret_card_8">AI Secret Card 8</string>
    <string name="ai_secret_card_2">AI Secret Card 2</string>
    <string name="ai_secret_card_7">AI Secret Card 7</string>
    <string name="ai_secret_card_4">AI Secret Card 4</string>
    <string name="ai_secret_card_3">AI Secret Card 3</string>
    <string name="ai_secret_card_5">AI Secret Card 5</string>
    <string name="ai_river_scoring_card_4">AI River Scoring Card 4</string>
    <string name="ai_river_scoring_card_3">AI River Scoring Card 3</string>
    <string name="ai_river_scoring_card_1">AI River Scoring Card 1</string>
    <string name="ai_river_scoring_card_2">AI River Scoring Card 2</string>
    <string name="player_river_scoring_card_1">Player River Scoring Card 1</string>
    <string name="player_river_scoring_card_3">Player River Scoring Card 3</string>
    <string name="player_river_scoring_card_2">Player River Scoring Card 2</string>
    <string name="player_river_scoring_card_4">Player River Scoring Card 4</string>
    <string name="player_secret_card_1">Player Secret Card 1</string>
    <string name="player_secret_card_9">Player Secret Card 9</string>
    <string name="player_secret_card_5">Player Secret Card 5</string>
    <string name="player_secret_card_2">Player Secret Card 2</string>
    <string name="player_secret_card_6">Player Secret Card 6</string>
    <string name="player_secret_card_10">Player Secret Card 10</string>
    <string name="player_secret_card_3">Player Secret Card 3</string>
    <string name="player_secret_card_7">Player Secret Card 7</string>
    <string name="player_secret_card_11">Player Secret Card 11</string>
    <string name="player_secret_card_4">Player Secret Card 4</string>
    <string name="player_secret_card_8">Player Secret Card 8</string>
    <string name="player_secret_card_12">Player Secret Card 12</string>
    <string name="player_hand_card_5">Player Hand Card 5</string>
    <string name="return_to_main_menu">Return</string>
    <string name="overwriteme">overwriteme</string>
    <string name="textview">TextView</string>
    <string name="select_this_card">Select This Card</string>
    <string name="return_to_game">Return to Game</string>
    <string name="next_page">Next Page</string>
</resources>