<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background = "#000000"
    tools:context=".GameStart">

    <ImageButton
        android:id="@+id/deckDraw"
        android:layout_width="92dp"
        android:layout_height="153dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="303dp"
        android:contentDescription="@string/deck_to_draw_from"
        android:onClick="deckDraw"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.647"
        app:srcCompat="@drawable/b00" />

    <ImageButton
        android:id="@+id/aiRiver1"
        android:layout_width="92dp"
        android:layout_height="153dp"
        android:contentDescription="@string/ai_river_card_1"
        android:onClick="destroyMe"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057"
        app:srcCompat="@drawable/b00" />

    <ImageButton
        android:id="@+id/aiRiver2"
        android:layout_width="92dp"
        android:layout_height="153dp"
        android:contentDescription="@string/ai_river_card_2"
        android:onClick="destroyMe"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.338"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057"
        app:srcCompat="@drawable/b00" />

    <ImageButton
        android:id="@+id/aiRiver3"
        android:layout_width="92dp"
        android:layout_height="153dp"
        android:contentDescription="@string/ai_river_3"
        android:onClick="destroyMe"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.661"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057"
        app:srcCompat="@drawable/b00" />

    <ImageButton
        android:id="@+id/aiRiver4"
        android:layout_width="92dp"
        android:layout_height="153dp"
        android:contentDescription="@string/ai_river_4"
        android:onClick="destroyMe"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057"
        app:srcCompat="@drawable/b00" />

    <ImageButton
        android:id="@+id/playerRiver1"
        android:layout_width="92dp"
        android:layout_height="153dp"
        android:contentDescription="@string/player_river_1"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.344"
        app:srcCompat="@drawable/b00" />

    <ImageButton
        android:id="@+id/playerRiver2"
        android:layout_width="92dp"
        android:layout_height="153dp"
        android:contentDescription="@string/player_river_2"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.338"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.344"
        app:srcCompat="@drawable/b00" />

    <ImageButton
        android:id="@+id/playerRiver3"
        android:layout_width="92dp"
        android:layout_height="153dp"
        android:contentDescription="@string/player_river_3"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.661"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.344"
        app:srcCompat="@drawable/b00" />

    <ImageButton
        android:id="@+id/playerRiver4"
        android:layout_width="92dp"
        android:layout_height="153dp"
        android:contentDescription="@string/player_river_4"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.344"
        app:srcCompat="@drawable/b00" />

    <ImageButton
        android:id="@+id/discard"
        android:layout_width="92dp"
        android:layout_height="153dp"
        android:contentDescription="@string/discard_pile"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.634"
        app:srcCompat="@drawable/b00" />

    <Button
        android:id="@+id/endTurn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="endTurn"
        android:text="@string/end_turn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.674" />

    <ImageView
        android:id="@+id/hand5"
        android:layout_width="65dp"
        android:layout_height="136dp"
        android:clickable="true"
        android:contentDescription="@string/player_hand_card_5"
        android:focusable="true"
        android:onClick="hexCast"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toEndOf="@+id/deckDraw"
        app:layout_constraintTop_toBottomOf="@+id/playerRiver4"
        app:layout_constraintVertical_bias="0.934"
        app:srcCompat="@drawable/b00"
        tools:visibility="invisible" />

    <ImageView
        android:id="@+id/hand4"
        android:layout_width="65dp"
        android:layout_height="136dp"
        android:clickable="true"
        android:contentDescription="@string/player_hand_card_4"
        android:focusable="true"
        android:onClick="hexCast"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.638"
        app:layout_constraintStart_toEndOf="@+id/deckDraw"
        app:layout_constraintTop_toBottomOf="@+id/playerRiver4"
        app:layout_constraintVertical_bias="0.934"
        app:srcCompat="@drawable/b00"
        tools:visibility="invisible" />

    <ImageView
        android:id="@+id/hand3"
        android:layout_width="65dp"
        android:layout_height="136dp"
        android:clickable="true"
        android:contentDescription="@string/player_haand_card_3"
        android:focusable="true"
        android:onClick="hexCast"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.336"
        app:layout_constraintStart_toEndOf="@+id/deckDraw"
        app:layout_constraintTop_toBottomOf="@+id/playerRiver4"
        app:layout_constraintVertical_bias="0.934"
        app:srcCompat="@drawable/b00"
        tools:visibility="invisible" />

    <ImageView
        android:id="@+id/hand2"
        android:layout_width="65dp"
        android:layout_height="136dp"
        android:clickable="true"
        android:contentDescription="@string/player_hand_card_2"
        android:focusable="true"
        android:onClick="hexCast"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toEndOf="@+id/deckDraw"
        app:layout_constraintTop_toBottomOf="@+id/playerRiver4"
        app:layout_constraintVertical_bias="0.934"
        app:srcCompat="@drawable/b00"
        tools:visibility="invisible" />

    <ImageView
        android:id="@+id/hand1"
        android:layout_width="65dp"
        android:layout_height="136dp"
        android:contentDescription="@string/player_hand_card_1"
        android:onClick="hexCast"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerRiver4"
        app:layout_constraintVertical_bias="0.934"
        app:srcCompat="@drawable/b00"
        tools:visibility="invisible" />

    <ImageView
        android:id="@+id/select1"
        android:layout_width="65dp"
        android:layout_height="136dp"
        android:contentDescription="@string/player_hand_card_1"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerRiver4"
        app:layout_constraintVertical_bias="0.847"
        app:srcCompat="@drawable/b00"
        tools:visibility="invisible" />

    <ImageView
        android:id="@+id/select2"
        android:layout_width="65dp"
        android:layout_height="136dp"
        android:clickable="true"
        android:contentDescription="@string/player_hand_card_2"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toEndOf="@+id/deckDraw"
        app:layout_constraintTop_toBottomOf="@+id/playerRiver4"
        app:layout_constraintVertical_bias="0.847"
        app:srcCompat="@drawable/b00"
        tools:visibility="invisible"
        android:focusable="true" />

    <ImageView
        android:id="@+id/select3"
        android:layout_width="65dp"
        android:layout_height="136dp"
        android:clickable="true"
        android:contentDescription="@string/player_haand_card_3"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.336"
        app:layout_constraintStart_toEndOf="@+id/deckDraw"
        app:layout_constraintTop_toBottomOf="@+id/playerRiver4"
        app:layout_constraintVertical_bias="0.847"
        app:srcCompat="@drawable/b00"
        tools:visibility="invisible"
        android:focusable="true" />

    <ImageView
        android:id="@+id/select4"
        android:layout_width="65dp"
        android:layout_height="136dp"
        android:clickable="true"
        android:contentDescription="@string/player_hand_card_4"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.638"
        app:layout_constraintStart_toEndOf="@+id/deckDraw"
        app:layout_constraintTop_toBottomOf="@+id/playerRiver4"
        app:layout_constraintVertical_bias="0.847"
        app:srcCompat="@drawable/b00"
        tools:visibility="invisible"
        android:focusable="true" />

    <ImageView
        android:id="@+id/select5"
        android:layout_width="65dp"
        android:layout_height="136dp"
        android:clickable="true"
        android:contentDescription="@string/player_hand_card_5"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toEndOf="@+id/deckDraw"
        app:layout_constraintTop_toBottomOf="@+id/playerRiver4"
        app:layout_constraintVertical_bias="0.847"
        app:srcCompat="@drawable/b00"
        tools:visibility="invisible"
        android:focusable="true" />
</androidx.constraintlayout.widget.ConstraintLayout>